# semver

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: error.rs  history.rs  lib.rs  semantic.rs
tests/: history.rs
